# cafe-crafter

./: .env.example  .gitignore  docker-compose.yml
api/: README.md  alembic.ini  consts.py  database.py  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 06dcd3eb6f56_initial_migration.py  2758edc823ed_update_product_description_length_and_.py  9617ad06ac66_update_order_and_product_relationship_.py
api/models/: address.py  order.py  orders_products.py  product.py  user.py
frontend/: package.json
