[project]
name = "api"
version = "0.1.0"
description = "E-commerce for all things coffee related."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.6",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "sqlalchemy>=2.0.37",
]
